Changed more pictures and about.html

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About - Business Casual - Start Bootstrap Theme</title>
+    <title>Croissanterie Bilderdijk</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Croissanterie Bilderdijk</div>
+    <div class="address-bar">Bilderdijkstraat 38| Amsterdam, 1052 NB | 52.3714621,4.8697943,19</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
