added some minor details, a custom cursor, small content changes

--- a/about.html
+++ b/about.html
@@ -28,12 +28,17 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <style type="text/css">
+        html {
+            cursor: url(cursors/bread.cur), auto;
+        }
+    </style>
 </head>
 
 <body>
 
     <div class="brand">Croissanterie Bilderdijk</div>
-    <div class="address-bar">Bilderdijkstraat 38| Amsterdam, 1052 NB | 52.3714621,4.8697943,19</div>
+    <div class="address-bar"><i>"Niet lekker, geld terug"</i></div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
