--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    
+    <style type="text/css">
+        html {
+            cursor: url(cursors/bread.cur), auto;
+        }
+    </style>
 </head>
 
 <body>
