Made some more changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Croissanterie Bilderdijk</title>
+    <title>Home - Croissanterie Bilderdijk</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
 <body>
 
     <div class="brand">Croissanterie Bilderdijk</div>
-    <div class="address-bar">Bilderdijkstraat 38| Amsterdam, 1052 NB | 52.3714621,4.8697943,19</div>
+    <div class="address-bar"><i>"Niet lekker, geld terug"</i></div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -64,7 +64,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="blog.html">Blog</a>
+                        <a href="blog.html">Products</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -111,7 +111,7 @@
                         </a>
                     </div>
                     <h2 class="brand-before">
-                        <small>Welkom bij</small>
+                        <small>Welcome to</small>
                     </h2>
                     <h1 class="brand-name">Croissanterie Bilderdijk</h1>
                     <hr class="tagline-divider">
