--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Contact - Croissanterie Bilderdijk</title>
+    <link rel="SHORTCUT ICON" href="img/favicon.ico" />
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
