--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Croissanterie Bilderdijk</title>
+    <title>About - Croissanterie Bilderdijk</title>
+    <link rel="SHORTCUT ICON" href="img/favicon.ico" />
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
