--- a/blog.html
+++ b/blog.html
@@ -59,7 +59,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="blog.html">Projects</a>
+                        <a href="blog.html">Blog</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -78,7 +78,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">Company
-                        <strong>blog</strong>
+                        <strong>Projects</strong>
                     </h2>
                     <hr>
                 </div>
@@ -89,7 +89,16 @@
                         <small>October 13, 2013</small>
                     </h2>
                     <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
+
+                    <div class="someprice" data-price='0.75'>
+                        <h3>Naturel Croissants</h3>
+                        <p>€ 0.75 per piece</p>
+                        <p>
+                            Enter the number:
+                            <input type="number" class='quantity' value="1">
+                        </p>
+                    </div>
+                    <p>Total Price: € <span class="total">0.75</span></p>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
@@ -99,7 +108,16 @@
                         <small>October 13, 2013</small>
                     </h2>
                     <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
+
+                    <div class="someprice" data-price='1.00'>
+                        <h3> Naturel Croissants</h3>
+                        <p>€ 1.00 per piece</p>
+                        <p>
+                            Enter the number:
+                            <input type="number" class='quantity' value="1">
+                        </p>
+                    </div>
+                    <p>Total Price: € <span class="total">1.00</span></p>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
@@ -109,8 +127,45 @@
                         <small>October 13, 2013</small>
                     </h2>
                     <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
+                    <div class="someprice" data-price='1.00'>
+                        <h3> Cheese Croissants</h3>
+                        <p>€ 1.00 per piece</p>
+                        <p>
+                            Enter the number:
+                            <input type="number" class='quantity' value="1">
+                        </p>
+                    </div>
+                    <p>Total Price: € <span class="total">1.00</span></p>
+
+                    <div class="col-lg-12 text-center">
+                    <img class="img-responsive img-border img-full" src="img/slide-1.jpg" alt="">
+                    <h2>Post Title
+                        <br>
+                        <small>October 13, 2013</small>
+                    </h2>
+                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+
+                    <div class="someprice" data-price='1.20'>
+                        <h3>Ham&Cheese Croissants</h3>
+                        <p>€ 1.20 per piece</p>
+                        <p>
+                            Enter the number:
+                            <input type="number" class='quantity' value="1">
+                        </p>
+                    </div>
+                    <p>Total Price: € <span class="total">0.75</span></p>
                     <hr>
+                </div>
+                    <!-- <div class="someprice" data-price='1.00'>
+                        <h3> Cheese Croissants</h3>
+                        <p>€ 1.00 per piece</p>
+                        <p>
+                            Enter the number:
+                            <input type="number" class='quantity' value="1">
+                        </p>
+                    </div>
+                    <p>Total Price: € <span id="total">1.00</span></p>
+                    <hr> -->
                 </div>
                 <div class="col-lg-12 text-center">
                     <ul class="pager">
@@ -141,6 +196,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/getprice.js"></script>
 
 </body>
 
