made changes to products page to align with the other pages

--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Products</title>
+    <title>Products - Croissanterie Bilderdijk</title>
     <link rel="SHORTCUT ICON" href="img/favicon.ico" />
 
     <!-- Bootstrap Core CSS -->
@@ -29,12 +29,19 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+
+    <style>
+        html {
+            cursor: url(cursors/bread.cur), auto;
+        }
+
+    </style>
 </head>
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Croissanterie Bilderdijk</div>
+    <div class="address-bar"><i>"Niet lekker, geld terug"</i></div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -60,7 +67,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="blog.html">Projects</a>
+                        <a href="products.html">Products</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -78,8 +85,8 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Company
-                        <strong>Projects</strong>
+                    <h2 class="intro-text text-center">Croissanterie Bilderdijk
+                        <strong>Produts</strong>
                     </h2>
                     <hr>
                 </div>
