--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="blog.html">Products</a>
+                        <a href="products.html">Products</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
