--- a/products.html
+++ b/products.html
@@ -86,7 +86,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">Croissanterie Bilderdijk
-                        <strong>Produts</strong>
+                        <strong>Products</strong>
                     </h2>
                     <hr>
                 </div>
