Changed photos in about.html

--- a/about.html
+++ b/about.html
@@ -110,9 +110,9 @@
                     <hr>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive employees" src="photos/AbdullahAzzedine.jpg" alt="">
-                    <h3>Abdullah Ouirini and Azzedine Ouirini
-                        <small>Manager's</small>
+                    <img class="img-responsive employees" src="photos/Abdullah.jpg" alt="">
+                    <h3>Abdullah Ouirini
+                        <small>Manager</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
@@ -125,12 +125,6 @@
                     <img class="img-responsive employees" src="photos/Mohammed.jpg" alt="">
                     <h3>Mohammed Ouirini
                         <small>Master tea maker</small>
-                    </h3>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive employees" src="photos/Bekkay.jpg" alt="">
-                    <h3>El-Bekkay Ouirini
-                        <small>Owner</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
