Added content and made some changes

--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@
                         <strong>form</strong>
                     </h2>
                     <hr>
-                    <p>Yo mamma fo shizzle fo. Donizzle i'm in the shizzle. Maecenizzle placerizzle mauris izzle crackalackin. Check out this izzle tortizzle. Tellivizzle id tortizzle bizzle mi bling bling condimentum. Cool hizzle yippiyo sizzle amet, consectetizzle adipiscing yo mamma. Fo shizzle elizzle arcu, funky fresh nizzle, pimpin' break yo neck, yall, mollizzle i'm in the shizzle, est. Aliquizzle erizzle volutpat.</p>
+                    <p>Visit us and have a croissant and some tea! If you want to contact us fill out the form below! See you soon!</p>
                     <form role="form">
                         <div class="row">
                             <div class="form-group col-lg-4">
