--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                     <hr>
                     <img class="img-responsive img-border img-left toonbank" src="photos/toonbank.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-                    <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p>Combining their mastery in Viennoiserie and Moroccan pastries. Viennoiseries ("things of Vienna") are baked goods made from a yeast-leavened dough in a manner similar to bread, or from puff pastry, but with added ingredients (particularly eggs, butter, milk, cream and sugar) giving them a richer, sweeter character, approaching that of pastry. The dough is often laminated. Viennoiseries are typically eaten at breakfast or as snacks. 
+                    </p>
+                    <p>The popularity of Viennese-style baked goods in France began with the Viennese Bakery opened by August Zang in 1839. The first usage of the expression "pâtisseries viennoises" appears in a book by French author Alphonse Daudet, Le Nabab in 1877. The use of puff pastry to make them came later, however, and is a French, not Viennese, method.</p>
                 </div>
             </div>
         </div>
@@ -152,9 +152,9 @@
                     <hr>
                     <img class="img-responsive img-border img-left" src="photos/sweets.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-                    <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p>A variety of flaky pastries, rich cakes and sticky sweets, Moroccan desserts will satisfy all your sugar cravings.</p>
+                    <p>From Faqqas, a type of macaroon made with semolina flour, to Briouat, filled with almond past, and Chebakia, a fried dough "rose" dipped in honey and sesame seed.</p>
+                    <p></p>
                 </div>
             </div>
         </div>
@@ -169,14 +169,21 @@
                     <hr>
                     <img class="img-responsive img-border img-left" src="photos/tea.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-                    <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p>Maghrebi mint tea, also known as Moroccan tea, is a green tea prepared with spearmint leaves and sugar, traditional to the Greater Maghreb region. It has since spread throughout North Africa, parts of the Sahel, France and the Arab world. As a combination of imported ingredients (tea from China and originally imported sugar) and a local ingredient (fresh mint), it is an early example of globalization in cuisine. </p>
+                    <p>The cultivar spearmint (Mentha spicata) Nana, possesses a clear, pungent, mild aroma, and is the mint that is traditionally used in Maghrebi mint tea. Other hybrids and cultivars of Mentha, including Yerba buena, are occasionally used as substitutes for Nana mint.</p>
+                    <p>Green tea is a type of tea that is made from Camellia sinensis leaves that have not undergone the same withering and oxidation process used to make oolong and black tea. Green tea originated in China, but its production has spread to many countries in Asia. Several varieties of green tea exist, which differ substantially because of the variety of C. sinensis used, growing conditions, horticultural methods, production.</p>
+                    <p>Traditionally, the tea is served three times. The amount of time it has been steeping gives each of the glasses of tea a unique flavor, described in this famous Maghrebi proverb:</p>
+                    <table>
+                        <tr>
+                            <td><i>Le premier verre est aussi doux que la vie, <br /> le deuxième est aussi fort que l'amour,<br /> le troisième est aussi amer que la mort.<br /></i></td>
+                            <td>The first glass is as gentle as life,<br />the second is as strong as love,<br /> the third is as bitter as death.<br /></td> 
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
-
-        <div class="row">
+<!-- extra box if we need it -->
+<!--         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
@@ -189,7 +196,7 @@
                 </div>
             </div>
         </div>
-
+ -->
     </div>
     <!-- /.container -->
 
