--- a/about.html
+++ b/about.html
@@ -92,9 +92,7 @@
                     <img class="img-responsive img-border-left" src="photos/Bilderdijk.png" alt="">
                 </div>
                 <div class="col-md-6">
-                    <p>This is a great place to introduce your company or project and describe what you do.</p>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Croissanterie Bilderdijk, situated on the crosspoint of the streets Bilderdijkstraat and De Clerqstraat, has been making croissants and other pastries for over 30 years. The gentlemen at Croissanterie Bilderdijkstraat are happy to serve you delicious pastries and magnificent hot and cold drinks.</p>
                 </div>
                 <div class="clearfix"></div>
             </div>
