commented out the older and newer buttons in products.html

--- a/products.html
+++ b/products.html
@@ -206,14 +206,14 @@
                     <p>Total Price: € <span id="total">1.00</span></p>
                     <hr> -->
                 </div>
-                <div class="col-lg-12 text-center">
+                <!-- <div class="col-lg-12 text-center">
                     <ul class="pager">
                         <li class="previous"><a href="#">&larr; Older</a>
                         </li>
                         <li class="next"><a href="#">Newer &rarr;</a>
                         </li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </div>
 
