added something to paragraph

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Crescent-shaped food breads have been made since the Renaissance, and crescent-s
 
 Croissants have long been a staple of Austrian and French bakeries and pâtisseries. In the late 1970s, the development of factory-made, frozen, pre-formed but unbaked dough made them into a fast food which can be freshly baked by unskilled labor. The croissanterie was explicitly a French response to American-style fast food, and today 30–40% of the croissants sold in French bakeries and patisseries are baked from frozen dough.
 
-Croissants are a common part of a continental breakfast.
+Croissants are a common part of a continental breakfast. They're very yummy!
 
 
 </p>
